fixed order list number spacing

--- a/CSS/Clydeindex.css
+++ b/CSS/Clydeindex.css
@@ -19,11 +19,11 @@ h1, h2{
     text-align: center;
 }
 
+/* header styles */
 header h1{
     color: whitesmoke;
     font-size: 50px;
     
-
 }
 
 header img{
@@ -53,10 +53,12 @@ p{
 ol{
     color: honeydew;
    
+   
 }
 
 ul{
     color: honeydew;
+    list-style: none;
 
 }
 
@@ -70,4 +72,9 @@ p.caption{
     font-style: italic;
     margin-top: 0;
     font-size: 15px;
+}
+
+.centerwrap {
+    width: 20%;
+    margin: 0 auto;
 }
